bugfix: background flickering bug

--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/mixins";
+@import "../../styles/constants/index.scss";
+
 .Background {
   width: 100vw;
   height: 100vh;
@@ -5,6 +8,14 @@
   z-index: -10;
   top: 0;
   left: 0;
+
+  &--light {
+    @include theme-background($light-background-start, $light-background-end);
+  }
+
+  &--dark {
+    @include theme-background($dark-background-start, $dark-background-end);
+  }
 
   canvas {
     display: block;
